[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hesmapy"
version = "0.1"
authors = [
  { name="Alexander Holas", email="alexander.holas@h-its.org" },
]
description = "HESMA file format reader and writer"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "jsonschema",
]

[project.urls]
"Homepage" = "https://github.com/alexhls/hesmapy"
"Bug Tracker" = "https://github.com/alexhls/hesmapy/issues"

[tool]
